--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,7 @@
 const path = require('path');
 
 module.exports = {
+  'config': path.resolve('src', 'config', 'config.cjs'),
   'migrations-path': path.resolve('src', 'migrations'),
-  'config': path.resolve('src', 'config', 'config.js'),
+  'models-path': path.resolve('src', 'models')
 };
