--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migration:generate": "sequelize-cli migration:generate --name",
     "migrate:undo": "sequelize-cli db:migrate:undo",
     "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
+    "migration:status": "sequelize-cli db:migrate:status",
     "dev": "node --watch --env-file .env src/app.js"
   },
   "keywords": [],
